--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:savicehv20pr"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Приложение" Height="450" Width="800" MinHeight="450" MinWidth="800" ResizeMode="NoResize">
     <Grid>
-        
+        <Frame x:Name="frame" NavigationUIVisibility="Hidden"/>
     </Grid>
 </Window>
